fix: img issues; result__video object-fit; change contant list container overflow-x; add active state to content__video-card; remove unit by zero

--- a/styles/style.css
+++ b/styles/style.css
@@ -120,7 +120,7 @@ ol {
 .result__video {
   width: 100%;
   height: 386px;
-  object-fit: fill;
+  object-fit: cover;
   object-position: center;
 }
 
@@ -158,7 +158,7 @@ ol {
 }
 
 .content__list {
-  width: 390px; /*399 - 4px widch of scrollbar*/
+  width: 389px;
 }
 
 .content__list-container {
@@ -166,7 +166,7 @@ ol {
   max-width: 399px;
   max-height: 298px;
   padding: 0 3px;
-  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .content__list-item:not(:last-child) {
@@ -208,6 +208,7 @@ ol {
 }
 
 .content__video-card-description {
+  max-width: 196px;
   margin-top: 6px;
   color: #ffffff;
   font-family: "Fira Sans Condensed", sans-serif;
@@ -215,6 +216,10 @@ ol {
   font-size: 18px;
   font-style: normal;
   line-height: 16.2px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+
 }
 
 .content__video-card-description-container {
@@ -224,6 +229,10 @@ ol {
 .content__card-link {
   color: white;
   text-decoration: none;
+}
+
+.content__video-card:active {
+  background-color: #545050;
 }
 
 .content__card-link_current .content__video-card {
@@ -330,8 +339,8 @@ ol {
 }
 
 .search-form__checkbox {
-  width: 0px;
-  height: 0px;
+  width: 0;
+  height: 0;
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
